# delta.lemmata.app

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  DEVELOPMENT_CONTRACT.md  LICENSE  PROJECT_MEMORY.md  README.md  SESSION_HANDOFF.md  START_HERE.md  app.py  codemeta.json  pyproject.toml
.github/: dependabot.yml
.streamlit/: config.toml
R/: dependencies.R
containers/: Dockerfile  base-images.lock.json  ci-actions.lock.json  gateway-images.lock.json
decisions/: ADR-0001-product-and-paper.md  ADR-0002-methodology-and-validation.md  ADR-0003-fair-provenance-and-memory.md  ADR-0004-pinocchio-worked-example.md  ADR-0005-public-research-and-stability.md  ADR-0006-expert-walkthrough-no-user-study.md  ADR-0007-authorship-and-publication-timeline.md  ADR-0008-scholarly-vibe-coding.md  ADR-0009-repository-and-environment.md  ADR-0010-local-working-copy-and-private-remote.md  ADR-0011-versioned-metadata-csv.md  ADR-0012-job-lifecycle-retention.md  ADR-0013-stylo-worker-parity.md  ADR-0014-preprocessing-corpus-health.md  ADR-0015-accelerated-public-alpha.md  ADR-0016-deferred-integrated-owner-walkthrough.md  ADR-0017-public-alpha-deployment-profile.md  ADR-0018-shared-vps-runtime-capacity.md
memory/: README.md
prompts/: P001-start.md  P002-claude-independent-audit-and-repair.md  P002-codex-audit-corrections.md  P002-start.md  P003-codex-execution-brief.md  P003-start.md  P004-automated-acceptance-rehearsal.md  P004-entry-experience-redesign.md  P004-exact-family-language-weave.md  P004-family-palette-and-parameter-orientation.md  P004-start.md  P005-start.md  P006-start.md  P007-start.md  P008-start.md  P009-start.md  P014-start.md  P016-living-text-observatory-prototype.md  P017-delta-cinematic-narrative.md
provenance/: README.md  human-decision-ledger.jsonl  prompt-events.jsonl
schemas/: asset-rights.schema.json  (+21 more)
(+720 files in other folders)
